logo shadow effect is added

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,12 @@
     height:45px;
     background:#ff3334;
     float:left;
-    -moz-box-shadow:     -10px 10px 10px #000000;
-    -webkit-box-shadow:  -10px 10px 10px #000000;
-    box-shadow:          -10px 10px 10px #000000;
+    -moz-box-shadow:     -10px 5px 10px #ffffff;
+    -webkit-box-shadow:  -10px 5px 10px #ffffff;
+    box-shadow:          -10px 5px 10px #ffffff;
+    position:absolute;
+    left:10px;
+    
 }
 .header-right{
     float:right;
